--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Ignore the build and lib dirs
 build/
 lib/
+front/
+.vscode/
 
 # Ignore any executables
 bin/
@@ -18,3 +20,5 @@ nbproject/
 *.xcworkspacedata
 *.xcuserstate
 *.xcsettings
+FUN
+VAR
